# matrix-commit

./: Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: matrix-action.yml  matrix-commit.yml
matrix-commit/: action.py  entrypoint.sh
src/: action.py  entrypoint.sh
