[tool.poetry]
name = "matrix-commit"
version = "1.1.1"
description = "A Github Action for sending messages to a Matrix Room."
authors = ["krazykirby99999"]
license = "MIT"
packages = [
    { include = "matrix-commit" }
]

[tool.poetry.dependencies]
python = "^3.9"
simplematrixbotlib = "2.5.1"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
